[package]
name = "attractor"
version = "0.1.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", default-features = false, features = [ "fs", "io-util", "process" ] }

[dev-dependencies]
tokio = { version = "1.15.0", default-features = false, features = [ "rt-multi-thread", "macros", "test-util" ] }
